unpackaged/main/default/objects/NotificationThrottleBatchSettings__mdt/NotificationThrottleBatchSettings__mdt.object-meta.xml
<CustomObject>
    <description>All the configurable variables related to the Notification Throttle Batch are set up in this custom metadata.</description>
    <label>Notification Throttle Batch Settings</label>
    <pluralLabel>Notification Throttle Batch Settings</pluralLabel>
</CustomObject>