unpackaged/main/default/objects/NotificationThrottleBatchSettings__mdt/fields/GeneicSubject__c.field-meta.xml
<CustomField>
    <fullName>GeneicSubject__c</fullName>
    <label>Geneic Subject</label>
    <type>TextArea</type>
</CustomField>