unpackaged/main/default/objects/NotificationThrottleBatchSettings__mdt/fields/HighPriorityLowerRange__c.field-meta.xml
<CustomField>
    <fullName>HighPriorityLowerRange__c</fullName>
    <label>High Priority Lower Range</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>