unpackaged/main/default/objects/NotificationThrottleBatchSettings__mdt/fields/LowPriorityLowerRange__c.field-meta.xml
<CustomField>
    <fullName>LowPriorityLowerRange__c</fullName>
    <label>Low Priority Lower Range</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>