unpackaged/main/default/objects/NotificationThrottleBatchSettings__mdt/fields/MaxPriority__c.field-meta.xml
<CustomField>
    <fullName>MaxPriority__c</fullName>
    <label>Max Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>