unpackaged/main/default/objects/NotificationThrottleBatchSettings__mdt/fields/MediumPriorityLowerRange__c.field-meta.xml
<CustomField>
    <fullName>MediumPriorityLowerRange__c</fullName>
    <label>Medium Priority Lower Range</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>